cmake_minimum_required(VERSION 2.8.7)

project(ners570_SpMV CXX)

set(SpMV_MAJOR_VERSION 0)
set(SpMV_MINOR_VERSION 0)
set(SpMV_PATCH_VERSION 0)

set(SpMV_VERSION ${SpMV_MAJOR_VERSION}.${SpMV_MINOR_VERSION}.${SpMV_PATCH_VERSION})


set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -Ofast")
set(CMAKE_CXX_FLAGS_DEBUG   "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g -Wall -pedantic")

if(NOT DEFINED CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE "Debug")
endif()
MESSAGE(STATUS "Build Configuration: ${CMAKE_BUILD_TYPE}")
MESSAGE(STATUS "CXX Compiler Flags: ${CMAKE_CXX_FLAGS}")
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    MESSAGE(STATUS "CXX ${CMAKE_BUILD_TYPE} Flags: ${CMAKE_CXX_FLAGS_DEBUG}")
elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
    MESSAGE(STATUS "CXX ${CMAKE_BUILD_TYPE} Flags: ${CMAKE_CXX_FLAGS_RELEASE}")
else()
    MESSAGE(STATUS "NO CONFIGURATION SPECIFIC COMPILER FLAGS")
endif()

add_subdirectory(src)


enable_testing()
add_subdirectory(test)

